# Local-Ai-GGUF-Edition

./: .gitattributes  README.md  debug.txt  debug2.txt  debug3.txt  debug4.txt  debug5.txt  debug6.txt  debug7.txt  debug8.txt  settings.gradle.kts  test.cpp
app/: build.gradle.kts
app/src/androidTest/java/com/example/localaiggufedition/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bridge.cpp
app/src/main/cpp/llama.cpp/ggml/src/ggml-vulkan/: CMakeLists.txt
app/src/main/cpp/llama.cpp/ggml/src/ggml-vulkan/cmake/: host-toolchain.cmake.in
app/src/main/cpp/llama.cpp/ggml/src/ggml-vulkan/vulkan-shaders/: CMakeLists.txt  vulkan-shaders-gen.cpp
app/src/main/java/com/example/localaiggufedition/: ChatUiState.kt  InferenceViewModel.kt  MainActivity.kt  MainScreen.kt  ModelManager.kt  NativeBridge.kt
app/src/main/java/com/example/localaiggufedition/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/localaiggufedition/: ExampleUnitTest.kt
gradle/: libs.versions.toml
